--- a/Capacitacion/composer.json
+++ b/Capacitacion/composer.json
@@ -16,9 +16,13 @@
     ],
     "require": {
         "composer/installers": "^1.9",
+        "drupal/admin_toolbar": "^2.4",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
-        "drupal/core-recommended": "^9.1"
+        "drupal/core-recommended": "^9.1",
+        "drupal/ctools": "^3.4",
+        "drupal/layout_builder_modal": "^1.1",
+        "drupal/panels": "^4.6"
     },
     "conflict": {
         "drupal/drupal": "*"
