--- a/Capacitacion/composer.json
+++ b/Capacitacion/composer.json
@@ -21,8 +21,11 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/ctools": "^3.4",
+        "drupal/devel": "^4.1",
         "drupal/layout_builder_modal": "^1.1",
-        "drupal/panels": "^4.6"
+        "drupal/page_manager": "^4.0@beta",
+        "drupal/panels": "^4.6",
+        "drupal/pathauto": "^1.8"
     },
     "conflict": {
         "drupal/drupal": "*"
