--- a/Capacitacion/composer.json
+++ b/Capacitacion/composer.json
@@ -24,9 +24,11 @@
         "drupal/devel": "^4.1",
         "drupal/devel_kint_extras": "^1.0",
         "drupal/layout_builder_modal": "^1.1",
+        "drupal/mailsystem": "^4.3",
         "drupal/page_manager": "^4.0@beta",
         "drupal/panels": "^4.6",
         "drupal/pathauto": "^1.8",
+        "drupal/smtp": "^1.0",
         "drupal/video_embed_field": "^2.4",
         "drush/drush": "^10.3"
     },
