Se mueven los modulos a carpeta Custom

--- a/Capacitacion/web/modules/custom/forcontu_hello/forcontu_hello.info.yml
+++ b/Capacitacion/web/modules/custom/forcontu_hello/forcontu_hello.info.yml
@@ -1,5 +1,5 @@
 name: Drupal Hello World
 type: module
 description: 'Hello World.'
-packge: drupal
+package: drupal
 core_version_requirement: '9.x'
